# uio

./: .dockerignore  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  pytest.ini  uio.code-workspace  uio.toml
.github/: labeler.yml  labels.md  labels.yml  project.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  epic.yml  feature_request.yml  spike.yml  task.yml
.github/workflows/: ci.yml  docker.yml  labeler.yml  labels-sync.yml  project-sync.yml  release.yml
.uio/memory/: project-context.memory.md
definitions/agents/: closer.agent.md  coder.agent.md  github-coder.agent.md  github-planner.agent.md  github-reviewer.agent.md  gitlab-coder.agent.md  mcp-smoke-test.agent.md  planner.agent.md  repo-stats.agent.md  reviewer.agent.md
definitions/prompts/: close-issue.prompt.md  github-coder.prompt.md  (+6 more)
docs/: 01-installation.md  02-concepts.md  03-quickstart.md  04-frontmatter.md  05-cli.md  06-configuration.md  07-providers.md  08-mcp.md  09-chat.md  10-cost.md  11-registry.md  12-writing-definitions.md  13-internals.md  14-container.md  15-use-cases.md  16-about.md  17-github-app-identities.md  18-design-decisions.md  19-memory.md  20-positioning.md  21-roadmap.md  README.md  github-identity-inventory.md  github-permission-matrix.md  governance.md  project-management.md
scripts/: project-sync.sh  validate_github_identity.py
tests/: test_attribution.py  test_chat.py  test_cli_agent_inspect.py  test_cli_explain.py  test_clients.py  test_config.py  test_context_injection.py  test_cost.py  test_definitions.py  test_examples.py  test_foreach.py  test_github_app.py  test_guardrails.py  test_inheritance.py  test_iteration_cap.py  test_ledger.py  test_link.py  test_mcp.py  test_mcp_init.py  test_memory.py  test_parser.py  test_probe.py  test_project_config.py  test_registry.py  test_routing.py  test_runner_retry.py  test_skills.py  test_smoke_mcp.py  test_tools.py  test_workflow.py
uio/: __init__.py  config.py  examples.py
(+52 files in other folders)
