[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "uio-ai"
version = "0.1.0rc2"
description = "Provider-agnostic AI agent/skill/prompt runner"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0-only"}
dependencies = [
    "click>=8.3.3",
    "google-genai>=1.0",
    "pyyaml>=6.0.3",
    "openai>=1.0",
]

[project.scripts]
uio = "uio.cli.main:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "ruff",
    "pyinstaller",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["uio*"]

[tool.ruff]
target-version = "py311"
line-length = 100
